fixed the project alignment bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -40,6 +40,10 @@ body {
   transform: translate(-50%, -50%);
 }
 
+.full-width {
+  width: 100%;
+}
+
 h1,
 h2 {
   font-weight: 200;
